Custom Workout routines update(NO PRESET Routines)
